# rtrc_split_csv

./: README.md  setup.cfg  setup.py
src/rtrc_split_csv/: RtrcSplitCsv.py
