[metadata]
name = RtrcSplitCsv
version = 0.0.1
author = Jeff Knight
author_email = jknight@arteric.com
description = RTRC package that splits a csv into DataFrame data and a configs dict
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
